Add architect role

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <h1>Kevin Brechbühl</h1>
 
-            <p>Hi, I'm a Software Engineer at <a href="https://www.nexplore.ch" target="_blank" rel="noopener noreferrer">Nexplore</a>.</p>
+            <p>Hi, I'm a Software Engineer / Architect at <a href="https://www.nexplore.ch" target="_blank" rel="noopener noreferrer">Nexplore</a>.</p>
 
             <ul class="icon-list">
                 <li>
